# ngrep

./: Cargo.toml  LICENSE  README.md
benchmark/: bench-vs-rg.sh
demo/: ngrep-demo.cast
src/: main.rs
