[package]
name = "ngrep"
version = "0.1.0"
edition = "2021"
description = "Drop-in grep replacement. Same interface, 5x-41x faster."
license = "MIT"
repository = "https://github.com/muninn-huginn/ngrep"

[dependencies]
regex = "1"
ignore = "0.4"
memmap2 = "0.9"
memchr = "2"
libc = "0.2"
itoa = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
